garbage collect to avoid memory issues in circleci

--- a/package.json
+++ b/package.json
@@ -196,8 +196,8 @@
     "start": "node scripts/start.js",
     "start:dashboard": "webpack-dashboard node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom --no-cache --coverage --maxWorkers=3",
-    "test:local": "node scripts/test.js --env=jsdom --cache --coverage -u",
+    "test": "node --expose-gc scripts/test.js --env=jsdom --no-cache --coverage --maxWorkers=3 --logHeapUsage",
+    "test:local": "node --expose-gc scripts/test.js --env=jsdom --cache --coverage -u --logHeapUsage",
     "server": "yarn run build && node src/server.js",
     "analyze": "codeclimate analyze -f html > codeclimate.html",
     "analyze:eslint": "codeclimate analyze -e eslint:eslint-3 -f html > codeclimate.html",
