--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
       - run:
           name: Jest Test Coverage
           command: |
-                    TEST=$(circleci tests glob "src/**/[a-bA-B0-9]*.test.{js}" "src/**/[c-jC-J]*.test.{js}" "src/**/[k-rK-R]*.test.{js}" "src/**/[s-zS-Z]*.test.{js}" | circleci tests split)
+                    TEST=$(circleci tests glob "src/**/[a-bA-B0-9]*.test.{js,jsx}" "src/**/[c-jC-J]*.test.{js,jsx}" "src/**/[k-rK-R]*.test.{js,jsx}" "src/**/[s-zS-Z]*.test.{js,jsx}" | circleci tests split)
                     yarn test $TEST -- --ci --reporters=default --reporters=jest-junit --coverageReporters=lcov
           environment:
             JEST_JUNIT_OUTPUT_NAME: "reports/jest/test-results.xml"
