--- a/package.json
+++ b/package.json
@@ -115,12 +115,14 @@
     "@babel/runtime-corejs2": "^7.15.3",
     "@epegzz/sass-vars-loader": "^6.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "pmmmwh/react-refresh-webpack-plugin#main",
+    "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.12",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
+    "@types/react-fontawesome": "^1.6.5",
     "@types/react-responsive": "^8.0.3",
     "@types/react-router-dom": "^5.1.8",
     "@types/shortid": "^0.0.29",
