--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.0.0",
     "react-image-fallback": "^8.0.0",
+    "react-joyride": "^2.3.2",
     "react-keyboard-time-input": "^2.1.1",
     "react-linkify": "^0.2.2",
     "react-loadable": "^5.5.0",
