--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,9 +187,9 @@ jobs:
       - run: mkdir ~/.npm-global
       - run: npm config set prefix '~/.npm-global'
       - run: export PATH=~/.npm-global/bin:$PATH
-      - run:
-          name: Replace config.json
-          command: cp ${STATIC_PATH}/config/config_dev.json ${STATIC_PATH}/config/config.json
+      #- run:
+      #    name: Replace config.json
+      #    command: cp ${STATIC_PATH}/config/config_dev.json ${STATIC_PATH}/config/config.json
       - run:
           name: Install dependencies
           command: yarn install --pure-lockfile
@@ -208,6 +208,17 @@ jobs:
       - run:
           name: Serve app
           command: nohup serve -s ./build -p 3000 &
+      - run:
+          name: Run API
+          command: |
+            git clone https://github.com/MetaPhase-Consulting/State-TalentMAP-API.git
+            cd State-TalentMAP-API
+            docker-compose build
+            docker-compose up
+            docker-compose run app python manage.py migrate
+            docker-compose run app python manage.py create_demo_environment
+            docker-compose run mock_fsbid npm run migrate
+            docker-compose run mock_fsbid npm run seed
       - run:
           name: Run Cypress
           command: yarn cypress:ci
