manually copy files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,6 +215,12 @@ jobs:
             cd State-TalentMAP-API
             chmod -R 777 ./
             docker-compose build
+            docker cp talentmap_api/ state-talentmap-api_app_1:/app/talentmap_api/
+            docker cp show_logo.py state-talentmap-api_app_1:/app/
+            docker cp wait-for-oracle.sh state-talentmap-api_app_1:/app/
+            docker cp create-oracle-user.sh state-talentmap-api_app_1:/app/
+            docker cp manage.py state-talentmap-api_app_1:/app/
+            docker cp setup.cfg state-talentmap-api_app_1:/app/
             docker-compose up -d
             docker-compose run app python manage.py migrate
             docker-compose run app python manage.py create_demo_environment
