--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,26 +217,32 @@ jobs:
             docker-compose run mock_fsbid npm run migrate
             docker-compose run mock_fsbid npm run seed
       - run:
-          name: Install dependencies
-          command: yarn install --pure-lockfile
-      - run:
-          name: sudo apt-get update
-          command: sudo apt-get update
-      - run:
-          name: Install cypress dependencies
-          command: sudo apt-get install libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
-      - run:
-          name: Build app
-          command: yarn build
-      - run:
-          name: Install serve
-          command: sudo npm install -g serve
-      - run:
-          name: Serve app
-          command: nohup serve -s ./build -p 3000 &
+          name: Build UI
+          command: docker-compose build
       - run:
           name: Run Cypress
-          command: yarn cypress:ci
+          command: docker-compose up
+      #- run:
+      #    name: Install dependencies
+      #    command: yarn install --pure-lockfile
+      #- run:
+      #    name: sudo apt-get update
+      #    command: sudo apt-get update
+      #- run:
+      #    name: Install cypress dependencies
+      #    command: sudo apt-get install libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+      #- run:
+      #    name: Build app
+      #    command: yarn build
+      #- run:
+      #    name: Install serve
+      #    command: sudo npm install -g serve
+      #- run:
+      #    name: Serve app
+      #    command: nohup serve -s ./build -p 3000 &
+      #- run:
+      #    name: Run Cypress
+      #    command: yarn cypress:ci
   zap:
     <<: *default-docker-node
     steps:
