--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@sweetalert/with-react": "^0.1.1",
+    "@wojtekmaj/react-daterange-picker": "^3.3.2",
     "axios": "^0.18.1",
     "axios-cache-adapter": "^2.7.3",
     "babel-plugin-lodash": "^3.3.4",
