--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@react-pdf-viewer/core": "2.11.0",
+    "@react-pdf-viewer/default-layout": "^2.11.0",
     "@sweetalert/with-react": "^0.1.1",
     "axios": "^0.18.1",
     "axios-cache-adapter": "^2.7.3",
@@ -42,6 +44,7 @@
     "lodash-webpack-plugin": "^0.11.6",
     "memoize-one": "^5.2.1",
     "numeral": "^2.0.6",
+    "pdfjs-dist": "2.6.347",
     "pem": "^1.14.3",
     "prop-types": "^15.6.0",
     "q": "^1.5.1",
@@ -67,7 +70,7 @@
     "react-loading-skeleton": "0.5.0",
     "react-markdown": "^4.3.1",
     "react-markdown-editor": "1.0.0",
-    "react-paginate": "^8.1.0",
+    "react-paginate": "^7.1.3",
     "react-picky": "^4.7.2",
     "react-redux": "^7.2.6",
     "react-responsive": "^8.1.0",
@@ -202,6 +205,7 @@
     "webpack-plugin-ramdisk": "^0.2.0",
     "whatwg-fetch": "2.0.3",
     "workbox-webpack-plugin": "^6.4.2",
+    "worker-loader": "^3.0.8",
     "yarn": "^1.22.17"
   },
   "scripts": {
