--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ default-docker-node: &default-docker-node
         PUBLIC_URL: /talentmap/
         STATIC_PATH: /home/circleci/project/public
         API_ROOT: http://app:8000/
+        NODE_OPTIONS: --max-old-space-size=3584
 jobs:
   build:
     <<: *default-docker-node
