--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,8 +112,7 @@ jobs:
       image: ubuntu-1604:202007-01
     steps:
       - checkout
-      - node/install:
-          install-yarn: true
+      - install-yarn
       - run: node --version
       - restore_cache:
           key: dependency-cache-{{ .Environment.CACHE_VERSION }}-{{ .Branch }}-{{ checksum "yarn.lock" }}
