--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,8 +113,8 @@ jobs:
       - run: sudo apt-get update && sudo apt-get upgrade
       - run: sudo apt-get install build-essential libssl-dev -y
       - run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-      - run: [[ -s $HOME/.nvm/nvm.sh ]] && . $HOME/.nvm/nvm.sh install 12.13.0
-      - run: [[ -s $HOME/.nvm/nvm.sh ]] && . $HOME/.nvm/nvm.sh use 12.13.0
+      - run: '[[ -s $HOME/.nvm/nvm.sh ]] && . $HOME/.nvm/nvm.sh install 12.13.0'
+      - run: '[[ -s $HOME/.nvm/nvm.sh ]] && . $HOME/.nvm/nvm.sh use 12.13.0'
       - run: sudo apt install yarn
       - run: node --version
       - restore_cache:
