--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,9 @@ jobs:
       - run: node --version
       - restore_cache:
           key: dependency-cache-{{ .Environment.CACHE_VERSION }}-{{ .Branch }}-{{ checksum "yarn.lock" }}
-      - run: mkdir ~/.npm-global
-      - run: npm config set prefix '~/.npm-global'
-      - run: export PATH=~/.npm-global/bin:$PATH
+      #- run: mkdir ~/.npm-global
+      #- run: npm config set prefix '~/.npm-global'
+      #- run: export PATH=~/.npm-global/bin:$PATH
       - run: yarn install --pure-lockfile
       - run:
           name: Build site
