--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,7 @@ jobs:
             ./cc-test-reporter sum-coverage --output - codeclimate.*.json | ./cc-test-reporter upload-coverage --debug --input -
 
   site:
+    # use machine executor to get 7.5gb instead of 4gb RAM and avoid "Exited with code exit status 137" memory error
     machine:
       image: ubuntu-2004:202111-02
     steps:
@@ -125,9 +126,6 @@ jobs:
       - run: node --version
       - restore_cache:
           key: dependency-cache-{{ .Environment.CACHE_VERSION }}-{{ .Branch }}-{{ checksum "yarn.lock" }}
-      #- run: mkdir ~/.npm-global
-      #- run: npm config set prefix '~/.npm-global'
-      #- run: export PATH=~/.npm-global/bin:$PATH
       - run: yarn install --pure-lockfile
       - run:
           name: Build site
@@ -275,25 +273,25 @@ workflows:
       #           - dev
       #           - staging
       #           - master
-      #- yarn
-      #- upload-coverage:
-      #    requires:
-      #      - yarn
-      - site
-      #    requires:
-      #      - yarn
-      #- server:
-      #    requires:
-      #      - yarn
+      - yarn
+      - upload-coverage:
+          requires:
+            - yarn
+      - site:
+          requires:
+            - yarn
+      - server:
+          requires:
+            - yarn
       # Disabled see 1368 - pa11y:
       #    requires:
       #      - docker-build
-      #- deploy:
-      #    requires:
-      #      - yarn
-      #    filters:
-      #      branches:
-      #        only: dev
+      - deploy:
+          requires:
+            - yarn
+          filters:
+            branches:
+              only: dev
       # - zap:s
       #     requires:
       #       - docker-build
