--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,7 @@ jobs:
     # use machine executor to get 7.5gb instead of 4gb RAM and avoid "Exited with code exit status 137" memory error
     machine:
       image: ubuntu-2004:202111-02
+    resource_class: large
     steps:
       - checkout
       - run:
