Feature flag agenda item creation

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -32,6 +32,7 @@
     "register_checklist": true,
     "agenda_search": true,
     "agenda_filters": true,
-    "step_letters": true
+    "step_letters": true,
+    "create_agenda_item": true
   }
 }
