--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,7 @@ jobs:
           name: Use nvm
           command: |
             sudo apt-get update && sudo apt-get upgrade
-            sudo apt-get install build-essential libssl-dev -y
+            yes | sudo apt-get install build-essential libssl-dev -y
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
             export NVM_DIR="/opt/circleci/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
