--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,8 +116,11 @@ jobs:
       - run:
           name: Use nvm
           command: |
-            # sudo apt-get update && sudo apt-get upgrade
-            sudo DEBIAN_FRONTEND=noninteractive apt-get -yq upgrade
+            sudo su
+            echo "conf_force_conffold=YES" >> /etc/ucf.conf
+            exit
+            sudo apt-get update && sudo apt-get upgrade
+            # sudo DEBIAN_FRONTEND=noninteractive apt-get -yq upgrade
             yes | sudo apt-get install build-essential libssl-dev -y
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
             export NVM_DIR="/opt/circleci/.nvm"
