excluding snaps from workflow

--- a/.github/workflows/size-label.yml
+++ b/.github/workflows/size-label.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     branches-ignore:
       - 'dependabot/*'
+    paths-ignore:
+      - '**.snap'
 jobs:
   size-label:
     runs-on: ubuntu-latest
