--- a/.github/workflows/size-label.yml
+++ b/.github/workflows/size-label.yml
@@ -6,14 +6,13 @@ on:
 jobs:
   size-label:
     runs-on: ubuntu-latest
-    paths-ignore:
-      - '**.snap'
     steps:
       - name: size-label
         uses: "pascalgn/size-label-action@v0.4.3"
         if: ${{ github.actor != 'dependabot[bot]' }} # Skip the action if the PR was created by Dependabot.
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        IGNORED: "**.snap**"
         with:
           sizes: >
             {
