--- a/.github/workflows/size-label.yml
+++ b/.github/workflows/size-label.yml
@@ -12,7 +12,7 @@ jobs:
         if: ${{ github.actor != 'dependabot[bot]' }} # Skip the action if the PR was created by Dependabot.
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        IGNORED: "**.snap**"
+          IGNORED: "**.snap"
         with:
           sizes: >
             {
