--- a/.github/workflows/size-label.yml
+++ b/.github/workflows/size-label.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches-ignore:
       - 'dependabot/*'
+    paths-ignore:
+      - '**__snapshots__**'
+      - '**.snap'
 jobs:
   size-label:
     runs-on: ubuntu-latest
@@ -12,7 +15,7 @@ jobs:
         if: ${{ github.actor != 'dependabot[bot]' }} # Skip the action if the PR was created by Dependabot.
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          IGNORED: ".*\n!.gitignore\n*.snap\n**.snap\n.*.snap\ngenerated/**"
+          IGNORED: ".*\n*.snap\n**.snap\n.*.snap\ngenerated/**"
         with:
           sizes: >
             {
