--- a/.github/workflows/size-label.yml
+++ b/.github/workflows/size-label.yml
@@ -15,7 +15,14 @@ jobs:
         if: ${{ github.actor != 'dependabot[bot]' }} # Skip the action if the PR was created by Dependabot.
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          IGNORED: "*.snap\n**.snap\n.*.snap\n.jxs\njsx\n*.jsx\n**.jsx\ngenerated/**"
+          IGNORED: "*.snap"
+#          IGNORED: "**.snap"
+#          IGNORED: "*.snap/**"
+#          IGNORED: "**.snap/**"
+#          IGNORED: "*.snap\n**.snap\n.*.snap\n.jxs\njsx\n*.jsx\n**.jsx\ngenerated/**"
+#          IGNORED: "*.snap\n**.snap\n.*.snap\n.jxs\njsx\n*.jsx\n**.jsx\ngenerated/**"
+
+#          IGNORED: "*.snap\n**.snap\n.*.snap\n.jxs\njsx\n*.jsx\n**.jsx\ngenerated/**"
         with:
           sizes: >
             {
